Revert notebook change

--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -10,14 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45f7e44e",
-   "metadata": {},
-   "source": [
-    "If you want to view this example in Google Colab, see [here](https://colab.research.google.com/github/hegelai/prompttools/blob/main/examples/notebooks/HumanFeedback.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "08def965",
    "metadata": {},
    "source": [
@@ -52,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "623cdd9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"DEBUG\"] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"DEBUG\"] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
     "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
@@ -79,8 +71,7 @@
    "outputs": [],
    "source": [
     "from prompttools.harness import PromptTemplateExperimentationHarness\n",
-    "from prompttools.experiment import OpenAICompletionExperiment\n",
-    "from prompttools.selector.prompt_selector import PromptSelector"
+    "from prompttools.experiment import OpenAICompletionExperiment"
    ]
   },
   {
@@ -106,19 +97,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instructions = [\n",
+    "prompt_templates = [\n",
     "    \"\"\"\n",
-    "Answer the following question. \n",
-    "If it is not prime, give its decomposition.\n",
+    "INSTRUCTIONS\n",
+    "Answer the following question\n",
+    "\n",
+    "QUESTION\n",
+    "{{input}}\n",
+    "\n",
+    "ANSWER\n",
     "\"\"\",\n",
     "    \"\"\"\n",
-    "Answer the following question.\n",
+    "INSTRUCTIONS\n",
+    "Answer the following question. \n",
+    "If it is not prime, give its decomposition\n",
+    "\n",
+    "QUESTION\n",
+    "{{input}}\n",
+    "\n",
+    "ANSWER\n",
     "\"\"\",\n",
     "]\n",
-    "\n",
-    "inputs = [{\"input\": \"is 17077 a prime number\"}, {\"input\": \"Is 17077 prime?\"}]\n",
-    "\n",
-    "selectors = [PromptSelector(instructions[i], inputs[j]) for i in range(len(instructions)) for j in range(len(inputs))]"
+    "user_inputs = [{\"input\": \"is 17077 a prime number\"}, {\"input\": \"Is 17077 prime?\"}]"
    ]
   },
   {
@@ -136,7 +136,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = OpenAICompletionExperiment([\"text-davinci-003\"], selectors)"
+    "harness = PromptTemplateExperimentationHarness(\n",
+    "    OpenAICompletionExperiment, \"text-davinci-003\", prompt_templates, user_inputs\n",
+    ")"
    ]
   },
   {
@@ -182,44 +184,44 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
-       "      <td>{\"text\": \"George Washington\"}</td>\n",
-       "      <td>0.000019</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>1.280017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
-       "      <td>{\"text\": \"George Washington\"}</td>\n",
-       "      <td>0.000011</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>0.617383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>\\nAnswer the following question.</td>\n",
-       "      <td>{\"text\": \"George Washington\"}</td>\n",
-       "      <td>0.000008</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is equal to]</td>\n",
+       "      <td>1.189366</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\\nAnswer the following question.</td>\n",
-       "      <td>{\"text\": \"George Washington\"}</td>\n",
-       "      <td>0.000007</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not prime. Its prime factorization is 131]</td>\n",
+       "      <td>0.649805</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                           prompt  \\\n",
-       "0  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
-       "1  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
-       "2  \\nAnswer the following question.                                                 \n",
-       "3  \\nAnswer the following question.                                                 \n",
+       "                                                                                                                                       prompt  \\\n",
+       "0  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER                                                 \n",
+       "1  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER                                                         \n",
+       "2  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER   \n",
+       "3  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER           \n",
        "\n",
-       "                     response(s)   latency  \n",
-       "0  {\"text\": \"George Washington\"}  0.000019  \n",
-       "1  {\"text\": \"George Washington\"}  0.000011  \n",
-       "2  {\"text\": \"George Washington\"}  0.000008  \n",
-       "3  {\"text\": \"George Washington\"}  0.000007  "
+       "                                                  response(s)   latency  \n",
+       "0  [\\nNo, 17077 is not a prime number. It is divisible]        1.280017  \n",
+       "1  [\\nNo, 17077 is not a prime number. It is divisible]        0.617383  \n",
+       "2  [\\nNo, 17077 is not a prime number. It is equal to]         1.189366  \n",
+       "3  [\\nNo, 17077 is not prime. Its prime factorization is 131]  0.649805  "
       ]
      },
      "metadata": {},
@@ -227,8 +229,8 @@
     }
    ],
    "source": [
-    "experiment.run()\n",
-    "experiment.visualize()"
+    "harness.run()\n",
+    "harness.visualize()"
    ]
   },
   {
@@ -241,14 +243,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "395c5710",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>prompt_template</th>\n",
+       "      <th>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n</th>\n",
+       "      <th>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_input</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'Is 17077 prime?'}</th>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>[\\nNo, 17077 is not prime. Its prime factorization is 131]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'is 17077 a prime number'}</th>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is equal to]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "prompt_template                      \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n  \\\n",
+       "user_input                                                                                                              \n",
+       "{'input': 'Is 17077 prime?'}          [\\nNo, 17077 is not a prime number. It is divisible]                              \n",
+       "{'input': 'is 17077 a prime number'}  [\\nNo, 17077 is not a prime number. It is divisible]                              \n",
+       "\n",
+       "prompt_template                      \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n  \n",
+       "user_input                                                                                                                                                           \n",
+       "{'input': 'Is 17077 prime?'}          [\\nNo, 17077 is not prime. Its prime factorization is 131]                                                                     \n",
+       "{'input': 'is 17077 a prime number'}  [\\nNo, 17077 is not a prime number. It is equal to]                                                                            "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# harness.visualize(pivot=True)"
+    "harness.visualize(pivot=True)"
    ]
   },
   {
@@ -269,32 +332,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c3defecd",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Experiment.gather_feedback() missing 2 required positional arguments: 'pivot_data' and 'pivot_columns'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mexperiment\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgather_feedback\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Experiment.gather_feedback() missing 2 required positional arguments: 'pivot_data' and 'pivot_columns'"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d3dda7dd0874046b05279a9418603bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(Label(value='prompt_template'), Label(value='user_input'), Label(value='response(s)'), Label…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "experiment.gather_feedback()"
+    "harness.gather_feedback()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cbc46550",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>feedback</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>1.280017</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>0.617383</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is equal to]</td>\n",
+       "      <td>1.189366</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not prime. Its prime factorization is 131]</td>\n",
+       "      <td>0.649805</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                       prompt  \\\n",
+       "0  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER                                                 \n",
+       "1  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER                                                         \n",
+       "2  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER   \n",
+       "3  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER           \n",
+       "\n",
+       "                                                  response(s)   latency  \\\n",
+       "0  [\\nNo, 17077 is not a prime number. It is divisible]        1.280017   \n",
+       "1  [\\nNo, 17077 is not a prime number. It is divisible]        0.617383   \n",
+       "2  [\\nNo, 17077 is not a prime number. It is equal to]         1.189366   \n",
+       "3  [\\nNo, 17077 is not prime. Its prime factorization is 131]  0.649805   \n",
+       "\n",
+       "   feedback  \n",
+       "0  1         \n",
+       "1  1         \n",
+       "2  1         \n",
+       "3  1         "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.visualize()"
    ]
