Guard for mysql connector

--- a/examples/notebooks/MindsDBExperiment.ipynb
+++ b/examples/notebooks/MindsDBExperiment.ipynb
@@ -106,22 +106,23 @@
     "from prompttools.experiment import MindsDBExperiment\n",
     "\n",
     "\n",
-    "db = mysql.connector.connect(\n",
-    "    host=\"cloud.mindsdb.com\",\n",
-    "    user=\"user\",\n",
-    "    password=\"password\",\n",
-    "    port=\"3306\"\n",
-    ")\n",
+    "db = mysql.connector.connect(host=\"cloud.mindsdb.com\", user=\"user\", password=\"password\", port=\"3306\")\n",
     "\n",
-    "experiment = MindsDBExperiment(db_connector=db, **{\"prompt\": [\"\"\"\n",
+    "experiment = MindsDBExperiment(\n",
+    "    db_connector=db,\n",
+    "    **{\n",
+    "        \"prompt\": [\n",
+    "            \"\"\"\n",
     "    SELECT response\n",
     "    FROM {table}\n",
     "    WHERE author_username={author_username}\n",
     "    AND text={text}\n",
-    "    \"\"\"],\n",
-    "    \"table\": [\"mindsdb.gpt_model\"],\n",
-    "    \"author_username\": ['\"Agent\"'],\n",
-    "    \"text\": ['\"Who was the first President?\"']}\n",
+    "    \"\"\"\n",
+    "        ],\n",
+    "        \"table\": [\"mindsdb.gpt_model\"],\n",
+    "        \"author_username\": ['\"Agent\"'],\n",
+    "        \"text\": ['\"Who was the first President?\"'],\n",
+    "    },\n",
     ")\n",
     "\n",
     "\n",
@@ -129,6 +130,7 @@
     "\n",
     "\n",
     "from prompttools.utils import similarity\n",
+    "\n",
     "experiment.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"George Washington\")\n",
     "\n",
     "experiment.visualize()"
