Formatting and version

--- a/examples/notebooks/GPT4vsLlama2.ipynb
+++ b/examples/notebooks/GPT4vsLlama2.ipynb
@@ -74,8 +74,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"\"\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
@@ -126,35 +127,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instructions = [\"\"\"\n",
+    "instructions = [\n",
+    "    \"\"\"\n",
     "You are a sales development representative for a startup called Hegel AI.\n",
     "Your startup builds developer tools for large language models.\n",
     "\"\"\",\n",
-    "\"\"\"\n",
+    "    \"\"\"\n",
     "You are a customer support representative for a startup called Hegel AI.\n",
     "For context, Hegel AI does not offer refunds.\n",
     "Answer the following customer question:\n",
-    "\"\"\",         \n",
-    "\"\"\"\n",
+    "\"\"\",\n",
+    "    \"\"\"\n",
     "You are a helpful math tutor.\n",
     "Answer the following math problem:\n",
-    "\"\"\",                 \n",
-    "\"\"\"\n",
+    "\"\"\",\n",
+    "    \"\"\"\n",
     "Based on each input you receive, produce a valid JSON using only the keys \"metric_name\" and \"value\".\n",
-    "\"\"\"]\n",
-    "inputs = [\"\"\"\n",
+    "\"\"\",\n",
+    "]\n",
+    "inputs = [\n",
+    "    \"\"\"\n",
     "Draft a short sales email, 50 words or less, asking a prospect for 15 minutes\n",
     "of their time to chat about how they're using large language models.\n",
     "\"\"\",\n",
-    "\"\"\"\n",
+    "    \"\"\"\n",
     "Do you offer refunds?\n",
     "\"\"\",\n",
-    "\"\"\"\n",
+    "    \"\"\"\n",
     "Is 147 a prime number?\n",
     "\"\"\",\n",
-    "\"\"\"\n",
+    "    \"\"\"\n",
     "The speed of the car was 45mph\n",
-    "\"\"\"]\n",
+    "\"\"\",\n",
+    "]\n",
     "selectors = [PromptSelector(instructions[i], inputs[i]) for i in range(len(inputs))]"
    ]
   },
@@ -174,7 +179,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_paths = ['/Users/stevenkrawczyk/Downloads/llama-2-7b-chat.ggmlv3.q2_K.bin']  # Download from https://huggingface.co/TheBloke/Llama-2-7B-Chat-GGML/tree/main\n",
+    "model_paths = [\n",
+    "    \"/Users/stevenkrawczyk/Downloads/llama-2-7b-chat.ggmlv3.q2_K.bin\"\n",
+    "]  # Download from https://huggingface.co/TheBloke/Llama-2-7B-Chat-GGML/tree/main\n",
     "temperatures = [1.0]\n",
     "call_params = dict(temperature=temperatures)\n",
     "llama_experiment = LlamaCppExperiment(model_paths, selectors, call_params=call_params)"
@@ -187,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = ['gpt-4-0314', 'gpt-4-0613', 'gpt-4']\n",
+    "models = [\"gpt-4-0314\", \"gpt-4-0613\", \"gpt-4\"]\n",
     "temperatures = [0.0]\n",
     "openai_experiment = OpenAIChatExperiment(models, selectors, temperature=temperatures)"
    ]
@@ -300,18 +307,13 @@
     "        return [choice[\"message\"][\"content\"] for choice in output[\"choices\"]]\n",
     "\n",
     "\n",
-    "def use_gpt4(\n",
-    "    prompt: str, results: Dict, metadata: Dict\n",
-    ") -> float:\n",
+    "def use_gpt4(prompt: str, results: Dict, metadata: Dict) -> float:\n",
     "    \"\"\"\n",
     "    A simple test that checks semantic similarity between the user input\n",
     "    and the model's text responses.\n",
     "    \"\"\"\n",
-    "    distances = [\n",
-    "        autoeval.compute(prompt, response)\n",
-    "        for response in extract_responses(results)\n",
-    "    ]\n",
-    "    return min(distances)\n"
+    "    distances = [autoeval.compute(prompt, response) for response in extract_responses(results)]\n",
+    "    return min(distances)"
    ]
   },
   {
