Add OpenAI Chat function

--- a/examples/notebooks/OpenAIChatExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatExperiment.ipynb
@@ -23,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools\n",
+    "# !pip install --quiet matplotlib"
    ]
   },
   {
