--- a/examples/notebooks/LangChainSequentialChainExperiment.ipynb
+++ b/examples/notebooks/LangChainSequentialChainExperiment.ipynb
@@ -25,6 +25,16 @@
       "\n",
       "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
       "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
     },
@@ -60,17 +70,33 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>أنا أحب أكل الشاورما</td>\n",
-       "      <td>[{'Review': 'أنا أحب أكل الشاورما', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their strong enjoyment for eating shawarma.', 'followup_message': 'تعليق المتابعة: أشكرك على مشاركة رأيك في تجربتك مع تناول الشاورما. يسعدني أن تكون قد استمتعت بتذوق هذا الطبق الشهي. إن الشاورما تعتبر من أكثر الأطباق التي تحظى بشعبية كبيرة في العالم العربي، ولا عجب فهي تجمع بين النكهات الغنية والتوابل الفريدة. أتطلع دائمًا لتناول الشاورما واستكشاف المطاعم التي تقدمها. شكرًا مرة أخرى على تعليقك الإيجابي وأتمنى لك تجارب طعام ممتعة في المستقبل.'}]</td>\n",
-       "      <td>12.925311</td>\n",
-       "      <td>0.151234</td>\n",
+       "      <td>{'Review': 'أنا أحب أكل الشاورما', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their strong enjoyment for eating shawarma.', 'followup_message': 'تشكر المراجع على تعبيرهم القوي عن استمتاعهم الكبير بتناول الشاورما. نحن سعداء جدًا لمعرفة أنكم استمتعتم بهذه الوجبة الشهية. نحن نبذل قصارى جهدنا لتقديم أفضل جودة للشاورما ونحن نقدر تقديركم العالي لذلك. نتطلع إلى خدمتكم مرة أخرى في المستقبل القريب. شكرًا جزيلاً على تقييمكم الإيجابي ونحن نتطلع لرؤيتكم قريبًا.'}</td>\n",
+       "      <td>12.416809</td>\n",
+       "      <td>0.179893</td>\n",
        "      <td>0.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>أنا أحب أكل الشاورما</td>\n",
-       "      <td>[{'Review': 'أنا أحب أكل الشاورما', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their love for enjoying shawarma.', 'followup_message': 'المراجع يعبر عن حبه للاستمتاع بالشاورما. أنا أوافق تمامًا على رأيك! الشاورما هي واحدة من أفضل الأطباق التي يمكن تذوقها. لا يمكنني مقاومة الأطعمة الشهية والنكهة الغنية التي تقدمها الشاورما. عندما آكل الشاورما، أشعر وكأنني في رحلة مذاق شهية ومشوقة. كل مكون في الشاورما، سواء كان اللحم المشوي المغموس في التوابل اللذيذة، أو الخضروات المحمصة بشكل مثالي، يعمل معًا لتقديم تجربة غذائية لا تنسى. شكرًا لك على توصية الشاورما وأتطلع لمشاركتها مع العائلة والأصدقاء في المستقبل.'}]</td>\n",
-       "      <td>13.195340</td>\n",
-       "      <td>0.163725</td>\n",
+       "      <td>{'Review': 'أنا أحب أكل الشاورما', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their strong affection for shawarma.', 'followup_message': 'تعليق متابع: أشكرك على تقديم هذا المراجعة الرائعة عن الشاورما! أنا متحمس جدًا لمشاركة هذه الشغف القوي لديك تجاه هذا الطبق الشهي. الشاورما حقًا أطباق لذيذة ولا يمكن مقاومتها، فمجرد التفكير فيها يجعل اللعاب يسيل من فمي! ومن ثمة، عندما تتناغم نكهات اللحم المشوي العطري والصلصات اللذيذة والخضروات الطازجة في رغيف الخبز الطري، فإنها تعتبر تجربة لا مثيل لها بالفعل. أحب كيف يمكن تخصيص الشاورما حسب الأذواق الشخصية، سواء بإضافة الثوم، البقدونس، أو الصلصة الحارة، وهذا يجعل كل شاورما فريدة من نوعها. أعتقد أنه لا يمكن لأحد أن يجرب هذا الطبق الرائع ويبقى مستغربًا من حبكم العميق للشاورما. شكرًا لمشاركتكم هذه التجربة المدهشة!'}</td>\n",
+       "      <td>17.276991</td>\n",
+       "      <td>0.131922</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>me encanta comer shawarma</td>\n",
+       "      <td>{'Review': 'me encanta comer shawarma', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their strong enjoyment for eating shawarma.', 'followup_message': 'Respuesta: Me alegra mucho que hayas disfrutado tanto de comer shawarma. ¡Es una delicia! Definitivamente es uno de mis platos favoritos también. Me encanta la combinación de sabores y especias que se encuentran en el shawarma. ¿Tienes algún lugar en particular donde te gusta comerlo? Si tienes alguna recomendación de un buen lugar para probarlo, ¡me encantaría escucharla! ¡Gracias por compartir tu entusiasmo por esta deliciosa comida!'}</td>\n",
+       "      <td>7.916105</td>\n",
+       "      <td>0.204782</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>me encanta comer shawarma</td>\n",
+       "      <td>{'Review': 'me encanta comer shawarma', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expressed their strong enjoyment of eating shawarma.', 'followup_message': 'Respuesta: Agradezco mucho tu reseña sobre el shawarma. Me alegra saber que lo disfrutaste tanto. El shawarma es realmente delicioso, ¿verdad? Es uno de mis platos favoritos también. Si tienes alguna otra recomendación de lugares donde pueda probar un buen shawarma, ¡por favor avísame! ¡Gracias de nuevo por compartir tu opinión positiva!'}</td>\n",
+       "      <td>5.528532</td>\n",
+       "      <td>0.174965</td>\n",
        "      <td>0.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -78,17 +104,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                 prompt  \\\n",
-       "0  أنا أحب أكل الشاورما   \n",
-       "1  أنا أحب أكل الشاورما   \n",
+       "                      prompt  \\\n",
+       "0  أنا أحب أكل الشاورما        \n",
+       "1  أنا أحب أكل الشاورما        \n",
+       "2  me encanta comer shawarma   \n",
+       "3  me encanta comer shawarma   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              response  \\\n",
-       "0  [{'Review': 'أنا أحب أكل الشاورما', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their strong enjoyment for eating shawarma.', 'followup_message': 'تعليق المتابعة: أشكرك على مشاركة رأيك في تجربتك مع تناول الشاورما. يسعدني أن تكون قد استمتعت بتذوق هذا الطبق الشهي. إن الشاورما تعتبر من أكثر الأطباق التي تحظى بشعبية كبيرة في العالم العربي، ولا عجب فهي تجمع بين النكهات الغنية والتوابل الفريدة. أتطلع دائمًا لتناول الشاورما واستكشاف المطاعم التي تقدمها. شكرًا مرة أخرى على تعليقك الإيجابي وأتمنى لك تجارب طعام ممتعة في المستقبل.'}]                                                                                  \n",
-       "1  [{'Review': 'أنا أحب أكل الشاورما', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their love for enjoying shawarma.', 'followup_message': 'المراجع يعبر عن حبه للاستمتاع بالشاورما. أنا أوافق تمامًا على رأيك! الشاورما هي واحدة من أفضل الأطباق التي يمكن تذوقها. لا يمكنني مقاومة الأطعمة الشهية والنكهة الغنية التي تقدمها الشاورما. عندما آكل الشاورما، أشعر وكأنني في رحلة مذاق شهية ومشوقة. كل مكون في الشاورما، سواء كان اللحم المشوي المغموس في التوابل اللذيذة، أو الخضروات المحمصة بشكل مثالي، يعمل معًا لتقديم تجربة غذائية لا تنسى. شكرًا لك على توصية الشاورما وأتطلع لمشاركتها مع العائلة والأصدقاء في المستقبل.'}]   \n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    response  \\\n",
+       "0  {'Review': 'أنا أحب أكل الشاورما', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their strong enjoyment for eating shawarma.', 'followup_message': 'تشكر المراجع على تعبيرهم القوي عن استمتاعهم الكبير بتناول الشاورما. نحن سعداء جدًا لمعرفة أنكم استمتعتم بهذه الوجبة الشهية. نحن نبذل قصارى جهدنا لتقديم أفضل جودة للشاورما ونحن نقدر تقديركم العالي لذلك. نتطلع إلى خدمتكم مرة أخرى في المستقبل القريب. شكرًا جزيلاً على تقييمكم الإيجابي ونحن نتطلع لرؤيتكم قريبًا.'}                                                                                                                                                                                                                                                                                                                \n",
+       "1  {'Review': 'أنا أحب أكل الشاورما', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their strong affection for shawarma.', 'followup_message': 'تعليق متابع: أشكرك على تقديم هذا المراجعة الرائعة عن الشاورما! أنا متحمس جدًا لمشاركة هذه الشغف القوي لديك تجاه هذا الطبق الشهي. الشاورما حقًا أطباق لذيذة ولا يمكن مقاومتها، فمجرد التفكير فيها يجعل اللعاب يسيل من فمي! ومن ثمة، عندما تتناغم نكهات اللحم المشوي العطري والصلصات اللذيذة والخضروات الطازجة في رغيف الخبز الطري، فإنها تعتبر تجربة لا مثيل لها بالفعل. أحب كيف يمكن تخصيص الشاورما حسب الأذواق الشخصية، سواء بإضافة الثوم، البقدونس، أو الصلصة الحارة، وهذا يجعل كل شاورما فريدة من نوعها. أعتقد أنه لا يمكن لأحد أن يجرب هذا الطبق الرائع ويبقى مستغربًا من حبكم العميق للشاورما. شكرًا لمشاركتكم هذه التجربة المدهشة!'}   \n",
+       "2  {'Review': 'me encanta comer shawarma', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expresses their strong enjoyment for eating shawarma.', 'followup_message': 'Respuesta: Me alegra mucho que hayas disfrutado tanto de comer shawarma. ¡Es una delicia! Definitivamente es uno de mis platos favoritos también. Me encanta la combinación de sabores y especias que se encuentran en el shawarma. ¿Tienes algún lugar en particular donde te gusta comerlo? Si tienes alguna recomendación de un buen lugar para probarlo, ¡me encantaría escucharla! ¡Gracias por compartir tu entusiasmo por esta deliciosa comida!'}                                                                                                                                                                        \n",
+       "3  {'Review': 'me encanta comer shawarma', 'English_Review': 'I love eating shawarma.', 'summary': 'The reviewer expressed their strong enjoyment of eating shawarma.', 'followup_message': 'Respuesta: Agradezco mucho tu reseña sobre el shawarma. Me alegra saber que lo disfrutaste tanto. El shawarma es realmente delicioso, ¿verdad? Es uno de mis platos favoritos también. Si tienes alguna otra recomendación de lugares donde pueda probar un buen shawarma, ¡por favor avísame! ¡Gracias de nuevo por compartir tu opinión positiva!'}                                                                                                                                                                                                                                                                             \n",
        "\n",
        "     latency  similar_to_expected  temperature  \n",
-       "0  12.925311  0.151234             0.1          \n",
-       "1  13.195340  0.163725             0.9          "
+       "0  12.416809  0.179893             0.1          \n",
+       "1  17.276991  0.131922             0.9          \n",
+       "2  7.916105   0.204782             0.1          \n",
+       "3  5.528532   0.174965             0.9          "
       ]
      },
      "metadata": {},
@@ -101,6 +133,9 @@
     "from langchain.prompts import ChatPromptTemplate\n",
     "\n",
     "from prompttools.utils import similarity\n",
+    "\n",
+    "\n",
+    "llm = ChatOpenAI(temperature=0.9)\n",
     "\n",
     "# prompt template 1: translate to english\n",
     "first_prompt = ChatPromptTemplate.from_template(\n",
@@ -124,14 +159,14 @@
     ")\n",
     "\n",
     "experiment = SequentialChainExperiment(\n",
-    "    llms=[ChatOpenAI],\n",
+    "    llm=[ChatOpenAI],\n",
+    "    prompt=[\"أنا أحب أكل الشاورما\", \"me encanta comer shawarma\"],\n",
+    "    prompt_template=[[first_prompt, second_prompt, third_prompt, fourth_prompt]],\n",
     "    **{\n",
-    "        \"prompt_chain\": [first_prompt, second_prompt, third_prompt, fourth_prompt],\n",
     "        \"temperature\": [0.1, 0.9],\n",
-    "        \"input_variables\": [\"Review\"],\n",
-    "        \"output_variables\": [\"English_Review\", \"summary\", \"followup_message\"],\n",
-    "        \"output_key\": [\"English_Review\", \"summary\", \"language\", \"followup_message\"],\n",
-    "        \"prompt\": \"أنا أحب أكل الشاورما\",\n",
+    "        \"input_variables\": [[\"Review\"]],\n",
+    "        \"output_variables\": [[\"English_Review\", \"summary\", \"followup_message\"]],\n",
+    "        \"output_key\": [[\"English_Review\", \"summary\", \"language\", \"followup_message\"]]\n",
     "    }\n",
     ")\n",
     "\n",
@@ -160,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
