Add anthropic UI support

--- a/examples/notebooks/LangChainSequentialChainExperiment.ipynb
+++ b/examples/notebooks/LangChainSequentialChainExperiment.ipynb
@@ -138,19 +138,13 @@
     "llm = ChatOpenAI(temperature=0.9)\n",
     "\n",
     "# prompt template 1: translate to english\n",
-    "first_prompt = ChatPromptTemplate.from_template(\n",
-    "    \"Translate the following review to english:\"\n",
-    "    \"\\n\\n{Review}\"\n",
-    ")\n",
+    "first_prompt = ChatPromptTemplate.from_template(\"Translate the following review to english:\" \"\\n\\n{Review}\")\n",
     "\n",
     "second_prompt = ChatPromptTemplate.from_template(\n",
-    "    \"Can you summarize the following review in 1 sentence:\"\n",
-    "    \"\\n\\n{English_Review}\"\n",
+    "    \"Can you summarize the following review in 1 sentence:\" \"\\n\\n{English_Review}\"\n",
     ")\n",
     "\n",
-    "third_prompt = ChatPromptTemplate.from_template(\n",
-    "    \"What language is the following review:\\n\\n{Review}\"\n",
-    ")\n",
+    "third_prompt = ChatPromptTemplate.from_template(\"What language is the following review:\\n\\n{Review}\")\n",
     "\n",
     "fourth_prompt = ChatPromptTemplate.from_template(\n",
     "    \"Write a follow up response to the following \"\n",
@@ -166,8 +160,8 @@
     "        \"temperature\": [0.1, 0.9],\n",
     "        \"input_variables\": [[\"Review\"]],\n",
     "        \"output_variables\": [[\"English_Review\", \"summary\", \"followup_message\"]],\n",
-    "        \"output_key\": [[\"English_Review\", \"summary\", \"language\", \"followup_message\"]]\n",
-    "    }\n",
+    "        \"output_key\": [[\"English_Review\", \"summary\", \"language\", \"followup_message\"]],\n",
+    "    },\n",
     ")\n",
     "\n",
     "\n",
@@ -175,7 +169,7 @@
     "\n",
     "experiment.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"I love to eat shawarma\")\n",
     "\n",
-    "experiment.visualize()\n"
+    "experiment.visualize()"
    ]
   }
  ],
