--- a/examples/notebooks/OpenAIChatFunctionExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatFunctionExperiment.ipynb
@@ -129,7 +129,9 @@
     "]\n",
     "# You can add more parameters that you'd like to test here.\n",
     "\n",
-    "experiment = OpenAIChatExperiment(models, messages, temperature=temperatures, functions=[functions], function_call=[{\"name\": \"get_current_weather\"}])"
+    "experiment = OpenAIChatExperiment(\n",
+    "    models, messages, temperature=temperatures, functions=[functions], function_call=[{\"name\": \"get_current_weather\"}]\n",
+    ")"
    ]
   },
   {
@@ -185,7 +187,9 @@
    },
    "outputs": [],
    "source": [
-    "experiment.evaluate(\"similar_to_expected\", similarity.evaluate, expected=['{\"location\": \"Toronto, Canada\", \"format\": \"celsius\"}'] * 4)"
+    "experiment.evaluate(\n",
+    "    \"similar_to_expected\", similarity.evaluate, expected=['{\"location\": \"Toronto, Canada\", \"format\": \"celsius\"}'] * 4\n",
+    ")"
    ]
   },
   {
